[#00] Fix spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,3 +3,6 @@ $brand-success:             #188055 !default;
 @import "bootstrap";
 @import "home";
 @import "font-awesome/font-awesome";
+.m-t-5 {
+  margin-top: 5rem !important;
+}
